--- a/app/src/main/res/layout/item_allplaylist.xml
+++ b/app/src/main/res/layout/item_allplaylist.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/lnList"
     android:orientation="vertical">
 
     <FrameLayout
