--- a/app/src/main/res/layout/item_the_loai_theo_chu_de.xml
+++ b/app/src/main/res/layout/item_the_loai_theo_chu_de.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/lnChude"
     app:cardCornerRadius="5dp">
 
     <LinearLayout
