update ui, clean code and fix rx

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#120520"
     tools:context=".activity.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
@@ -20,10 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        app:tabIndicatorColor="#8b47d9"
+        app:tabIndicatorColor="#5E0257"
         app:tabIndicatorHeight="2dp"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="#e70a1d"
-        app:tabTextColor="#000000">
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="#8C8C8C">
     </com.google.android.material.tabs.TabLayout>
 </LinearLayout>
