--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#30012D">
 
     <TextView
         android:id="@+id/tv_titlePlaylist"
@@ -10,31 +11,18 @@
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:text="PLAYLIST DÀNH CHO BẠN"
-        android:textColor="#000000"
+        android:text="PLAYLIST DÀNH CHO BẠN (+)"
+        android:textColor="@android:color/white"
         android:textSize="25sp"
         android:textStyle="bold" />
-<ListView
-    android:id="@+id/lv_playlist"
-    android:layout_below="@+id/tv_titlePlaylist"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-</ListView>
-<TextView
-    android:text="Xem Thêm Playlist"
-    android:textSize="18sp"
-    android:drawablePadding="10dp"
-    android:drawableLeft="@drawable/iconmoreplaylist"
-    android:paddingLeft="5dp"
-    android:layout_below="@+id/lv_playlist"
-    android:id="@+id/tv_morePlaylist"
-    android:paddingTop="10dp"
-    android:background="#c9c7c7"
-    android:layout_marginTop="8dp"
-    android:paddingBottom="10dp"
-    android:layout_marginBottom="8dp"
-    android:textColor="#000000"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/lv_playlist"
+        android:layout_below="@+id/tv_titlePlaylist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+    </ListView>
 </RelativeLayout>
