--- a/app/src/main/res/layout/item_bai_hat_yeu_thich.xml
+++ b/app/src/main/res/layout/item_bai_hat_yeu_thich.xml
@@ -19,7 +19,7 @@
         android:layout_toRightOf="@id/img_baihatyeuthich"
         android:maxLines="2"
         android:text="Khi Phải Xa Em"
-        android:textColor="#000"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
         android:layout_toRightOf="@id/img_baihatyeuthich"
         android:singleLine="true"
         android:text="Trần Đình Trí"
-        android:textColor="#494949"
+        android:textColor="@android:color/white"
         android:textSize="15sp"
         android:textStyle="bold" />
 
@@ -44,6 +44,9 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:src="@drawable/iconlove" />
+        android:src="@drawable/iconlove"
+        android:tint="@android:color/white"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp" />
 
 </RelativeLayout>
