--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginTop="10dp">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/custom_background" />
 
     <ImageView
         android:id="@+id/img_backgroundPlaylist"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitXY" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY"
+        android:background="@drawable/bg_corner_default"/>
 
     <ImageView
         android:id="@+id/img_Playlist"
@@ -28,7 +32,9 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:elevation="6dp"
-        android:scaleType="fitXY" />
+        android:background="@drawable/bg_corner_small"
+        android:scaleType="fitXY"
+        android:layout_marginStart="15dp" />
 
     <TextView
         android:id="@+id/tv_NamePlaylist"
