--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<RelativeLayout
-    android:padding="7dp"
-    android:id="@+id/relaytiveAlbum"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<TextView
-    android:textColor="#000"
-    android:textSize="20sp"
-    android:textStyle="bold"
-    android:text="Album Hot"
-    android:id="@+id/tv_NameAlbum"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tv_xemthemAlbum"
-        android:textStyle="bold"
-        android:textColor="#e918ad"
-        android:textSize="18sp"
-        android:layout_alignParentRight="true"
-        android:text="Xem Thêm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    android:background="#30012D">
+
+    <RelativeLayout
+        android:padding="7dp"
+        android:id="@+id/relaytiveAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Album Hot >"
+            android:id="@+id/tv_NameAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:id="@+id/myRecycleAlbum"
         android:layout_below="@id/relaytiveAlbum"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        >
 
     </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
