--- a/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
+++ b/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 <TextView
     android:textSize="20sp"
-    android:textColor="#000"
+    android:textColor="@android:color/white"
     android:textStyle="bold"
     android:text="Có Thể Bạn Thích"
     android:layout_width="wrap_content"
