--- a/app/src/main/res/layout/fragment_chude_theloai.xml
+++ b/app/src/main/res/layout/fragment_chude_theloai.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#30012D">
 
     <RelativeLayout
         android:id="@+id/relativeTheloai"
@@ -13,19 +14,9 @@
             android:id="@+id/tv_chudetheloai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chủ Đề Và Thể Loại"
-            android:textColor="#000000"
+            android:text="Chủ Đề Và Thể Loại >"
+            android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_xemthem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Xem Thêm"
-            android:textColor="#ff0019"
-            android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
@@ -34,7 +25,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/relativeTheloai"
-        android:scrollbars="none">
+        android:scrollbars="none"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="5dp">
 
     </HorizontalScrollView>
 </RelativeLayout>
