--- a/app/src/main/res/layout/fragment_quangcao.xml
+++ b/app/src/main/res/layout/fragment_quangcao.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#30012D">
 
     <RelativeLayout
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp">
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:background="@color/colorAccent">
-
-        </androidx.viewpager.widget.ViewPager>
+            android:background="#30012D"
+            />
 
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/myIndicator"
@@ -23,8 +25,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
-            android:background="@android:color/transparent">
-
-        </me.relex.circleindicator.CircleIndicator>
+            android:background="@android:color/transparent"
+            />
     </RelativeLayout>
 </ScrollView>
