--- a/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
+++ b/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
@@ -12,7 +12,8 @@
     android:textSize="20sp"
     android:textColor="@android:color/white"
     android:textStyle="bold"
-    android:text="Có Thể Bạn Thích"
+    android:text="Có Thể Bạn Thích "
+    android:drawableRight="@drawable/ic_more"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
     </RelativeLayout>
