--- a/app/src/main/res/layout/fragment_chude_theloai.xml
+++ b/app/src/main/res/layout/fragment_chude_theloai.xml
@@ -14,7 +14,8 @@
             android:id="@+id/tv_chudetheloai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chủ Đề Và Thể Loại >"
+            android:text="Chủ Đề Và Thể Loại "
+            android:drawableRight="@drawable/ic_more"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
