--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#120520"
+    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/myViewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    </androidx.viewpager.widget.ViewPager>
+        android:layout_weight="1" />
+
+    <include
+        android:id="@+id/bottomMusic"
+        layout="@layout/bottom_sheet"
+        />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/myTablayout"
@@ -25,6 +29,7 @@
         app:tabIndicatorHeight="2dp"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@android:color/white"
-        app:tabTextColor="#8C8C8C">
-    </com.google.android.material.tabs.TabLayout>
+        app:tabTextColor="#8C8C8C" />
+
 </LinearLayout>
+
