--- a/app/src/main/res/layout/fragment_mv.xml
+++ b/app/src/main/res/layout/fragment_mv.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <TextView
-      android:id="@+id/tv_mv"
-      android:text="Xem MV"
-      android:textColor="@android:color/white"
-      android:textSize="32sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:id="@+id/search_mv"
+        style="@style/MaterialSearchBarDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:mt_backIconDrawable="@drawable/ic_baseline_arrow_back_24"
+        app:mt_hint="Nhập bài hát cần tìm"
+        app:mt_hintColor="@android:color/white"
+        app:mt_textColor="@color/white"
+        app:mt_maxSuggestionsCount="5"
+        app:mt_placeholder="Nhập bài hát cần tìm"
+        app:mt_roundedSearchBarEnabled="true"
+        app:mt_searchIconDrawable="@drawable/ic_search"
+        app:mt_searchIconTint="@android:color/white"
+        app:mt_speechMode="true" />
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recycler_mv"
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_marginTop="10dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/search_mv"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
