--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -1,77 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true"
-    android:scrollbars="none"
-    android:background = "#30012D">
-<androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="#30012D"
+    android:fillViewport="true"
+    android:scrollbars="none">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent">
 
-        <com.mancj.materialsearchbar.MaterialSearchBar
-            android:id = "@+id/search_music"
-            style="@style/MaterialSearchBarDark"
-            app:mt_speechMode="true"
-            app:mt_hint="Nhập bài hát cần tìm"
-            app:mt_hintColor="@android:color/white"
-            app:mt_maxSuggestionsCount="5"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:mt_searchIconDrawable="@drawable/ic_search"
-            app:mt_searchIconTint="@android:color/white"
-            app:mt_placeholder="Nhập bài hát cần tìm"
-            app:mt_backIconDrawable="@drawable/ic_baseline_arrow_back_24"
-            app:mt_roundedSearchBarEnabled="true"
-            android:layout_margin="5dp"
-            />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewSearch"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            />
-        <fragment
-            android:id="@+id/fragmentQuangCao"
-            android:name="com.trantri.tdt_music.Fragment.Fragment_QuangCao"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:orientation="vertical">
 
-        <fragment
-            android:id="@+id/fragmentPlaylist"
-            android:name="com.trantri.tdt_music.Fragment.FragmentPlaylist"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <com.mancj.materialsearchbar.MaterialSearchBar
+                android:id="@+id/search_music"
+                style="@style/MaterialSearchBarDark"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                app:mt_backIconDrawable="@drawable/ic_baseline_arrow_back_24"
+                app:mt_hint="Nhập bài hát cần tìm"
+                app:mt_hintColor="@android:color/white"
+                app:mt_maxSuggestionsCount="5"
+                app:mt_textColor="@color/white"
+                app:mt_placeholder="Nhập bài hát cần tìm"
+                app:mt_roundedSearchBarEnabled="true"
+                app:mt_searchIconDrawable="@drawable/ic_search"
+                app:mt_searchIconTint="@android:color/white"
+                app:mt_speechMode="true" />
 
-        <fragment
-            android:id="@+id/fragmentChuDeTheLoai"
-            android:name="com.trantri.tdt_music.Fragment.FragmentChuDeThLoai"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSearch"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
 
-        <fragment
-            android:id="@+id/fragmentAlbum"
-            android:name="com.trantri.tdt_music.Fragment.FragmentAlbum"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <fragment
+                android:id="@+id/fragmentQuangCao"
+                android:name="com.trantri.tdt_music.Fragment.Fragment_QuangCao"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <fragment
-            android:id="@+id/fragmentBaiHatYeuThich"
-            android:name="com.trantri.tdt_music.Fragment.FragmentBaiHat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <fragment
+                android:id="@+id/fragmentPlaylist"
+                android:name="com.trantri.tdt_music.Fragment.FragmentPlaylist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-</androidx.core.widget.NestedScrollView>
+            <fragment
+                android:id="@+id/fragmentChuDeTheLoai"
+                android:name="com.trantri.tdt_music.Fragment.FragmentChuDeThLoai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <fragment
+                android:id="@+id/fragmentAlbum"
+                android:name="com.trantri.tdt_music.Fragment.FragmentAlbum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <fragment
+                android:id="@+id/fragmentBaiHatYeuThich"
+                android:name="com.trantri.tdt_music.Fragment.FragmentBaiHat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 </FrameLayout>
