--- a/app/src/main/res/menu/menu_botoomnavigation.xml
+++ b/app/src/main/res/menu/menu_botoomnavigation.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/homeNavigation"
      android:icon="@drawable/icontrangchu"
-     android:title="Trang Chủ"
+     android:title="Home"
      />
     <item android:id="@+id/mvNavigation"
          android:icon="@drawable/ic_video"
@@ -10,7 +10,7 @@
         />
     <item android:id="@+id/personNavigation"
         android:icon="@drawable/ic_user"
-        android:title="MV"
+        android:title="User"
         />
 
 </menu>
