--- a/app/src/main/res/drawable/custom_navigation.xml
+++ b/app/src/main/res/drawable/custom_navigation.xml
@@ -2,11 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
- <corners android:topLeftRadius="15sp"
-     android:topRightRadius="15sp"
-     android:bottomLeftRadius="0dp"
-     android:bottomRightRadius="0dp"
-     />
-    <solid android:color="@color/colorPrimary"/>
-
+    <solid android:color="#FAFAFA"/>
+    <stroke android:color="@color/BLACK" android:width="0.2dp"/>
 </shape>
