--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:weightSum="6">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_weight="1.5"
+        android:layout_gravity="center"
         android:id="@+id/imgMusic"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"/>
+        android:layout_height="45dp"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="1dp"/>
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
         android:layout_weight="3"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -20,7 +25,7 @@
 
         <TextView
             android:id="@+id/sheet_tenbaihat"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ten bai hat"
@@ -31,7 +36,7 @@
 
         <TextView
             android:id="@+id/sheet_casi"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ca si"
@@ -53,19 +58,19 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_favorite"
             android:layout_width="wrap_content"
-            android:tint="@android:color/white"
+            android:tint="@android:color/black"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/sheet_playstate"
             android:layout_gravity="center"
             android:src="@drawable/ic_play"
-            android:tint="@android:color/white"
+            android:tint="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/sheet_next"
             android:layout_gravity="center"
-            android:tint="@android:color/white"
+            android:tint="@android:color/black"
             android:src="@drawable/ic_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
