--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#30012D">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:padding="7dp"
@@ -11,14 +10,16 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="Album Hot "
+            android:text="Album Hot"
             android:drawableRight="@drawable/ic_more"
+            android:drawableTint="@android:color/black"
             android:id="@+id/tv_NameAlbum"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_more" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
