--- a/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
+++ b/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
@@ -11,7 +11,7 @@
 
         <TextView
             android:textSize="20sp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textStyle="bold"
             android:text="Có Thể Bạn Thích "
             android:layout_width="wrap_content"
