--- a/app/src/main/res/layout/fragment_chude_theloai.xml
+++ b/app/src/main/res/layout/fragment_chude_theloai.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#30012D">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/relativeTheloai"
@@ -14,9 +13,10 @@
             android:id="@+id/tv_chudetheloai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chủ Đề Và Thể Loại "
+            android:text="Chủ Đề Và Thể Loại"
             android:drawableRight="@drawable/ic_more"
-            android:textColor="@android:color/white"
+            android:drawableTint="@android:color/black"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
     </RelativeLayout>
