--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#30012D">
+    android:layout_height="match_parent">
 
     <TextView
+        android:layout_centerHorizontal="true"
         android:id="@+id/tv_titlePlaylist"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:text="PLAYLIST DÀNH CHO BẠN (+)"
-        android:textColor="@android:color/white"
+        android:text="PLAYLIST DÀNH CHO BẠN"
+        android:drawableRight="@drawable/ic_more"
+        android:drawableTint="@android:color/black"
+        android:textColor="@android:color/black"
         android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:drawableEnd="@drawable/ic_more" />
 
     <ListView
         android:id="@+id/lv_playlist"
