--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">#5E0257</item>
+        <item name="colorPrimaryDark">#757575</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 <style name="tabLayoutHome">
