--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="BLACK">#000000</color>
+    <color name="playmusic_selected">#FD8686</color>
+    <color name="playmusic_unselect">#FFFFFF</color>
 </resources>
