--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -32,7 +32,7 @@
 
             <TextView
                 android:id="@+id/tv_tenAlbum"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="2dp"
@@ -48,7 +48,7 @@
             <TextView
                 android:textStyle="bold"
                 android:id="@+id/tv_tenCaSiALbum"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="2dp"
