--- a/app/src/main/res/layout/item_allplaylist.xml
+++ b/app/src/main/res/layout/item_allplaylist.xml
@@ -22,10 +22,10 @@
 
     <TextView
         android:id="@+id/tv_danhsachallplaylist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:gravity="left"
+        android:gravity="center"
         android:lines="2"
         android:maxLines="2"
         android:maxWidth="200dp"
@@ -35,9 +35,10 @@
 
     <TextView
         android:id="@+id/tv_tenCaSiPlaylist"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="Various Artists"
+        android:gravity="center"
         android:textColor="#545452"
         android:textSize="14sp"
         android:textStyle="bold" />
