--- a/app/src/main/res/layout/item_bai_hat_yeu_thich.xml
+++ b/app/src/main/res/layout/item_bai_hat_yeu_thich.xml
@@ -11,6 +11,7 @@
         android:scaleType="fitXY" />
 
     <TextView
+        android:maxWidth="250dp"
         android:id="@+id/tv_tenBaiHat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,9 +22,12 @@
         android:text="Khi Phải Xa Em"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_marginStart="5dp"
+        android:layout_toEndOf="@id/img_baihatyeuthich" />
 
     <TextView
+
         android:id="@+id/tv_tenCaSi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,8 +35,9 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="7dp"
         android:layout_toRightOf="@id/img_baihatyeuthich"
-        android:singleLine="true"
         android:text="Trần Đình Trí"
+        android:maxWidth="250dp"
+        android:maxLines="2"
         android:textColor="@android:color/black"
         android:textSize="15sp"
         android:textStyle="bold"
