--- a/app/src/main/res/layout/item_the_loai_theo_chu_de.xml
+++ b/app/src/main/res/layout/item_the_loai_theo_chu_de.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
     android:id="@+id/lnChude"
     app:cardCornerRadius="5dp">
 
